# some-app

./: .eslintrc.json  .prettierrc.json  App.tsx  Env.ts  app.config.js  app.json  eas.json  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/some_server/: __init__.py  __main__.py  main.py
backend/some_server/core/: config.py  logger.py  nahat_client_ws.py  server_api.py  utils.py
backend/some_server/core/database/: nahat_mongo.py
backend/some_server/core/endpoints/: card.py  log.py  user.py
backend/some_server/core/schemas/: schema.py
backend/tests/: barcode_client.py  dummy_client.py
client/: App.tsx  Env.ts  app.config.js  build-1669480640154.ipa  eas.json  package-lock.json  package.json
client/src/: api.tsx  apiTypes.ts  config.ts
client/src/apps/SomeMobile/screens/: CardScreen.tsx
client/src/components/LoaderAnim/: LoaderAnim.tsx
client/src/components/QrCodeScanner/: QrCodeScanner.tsx
client/src/components/UserAuth/: UserAuth.ts
src/: api.tsx  apiTypes.ts  hooks.tsx
src/apps/NahatClientApp/screens/: BarcodeScreen.tsx
src/apps/NahatMobileApp/screens/: CardScreen.tsx
src/apps/SomeMobile/screens/: CardScreen.tsx
src/components/CardMark/: CardMark.tsx
src/components/DimAnim/: DimAnim.tsx
src/components/FadeInAnim/: FadeInAnim.tsx
src/components/PopupModal/: PopupModal.tsx
src/components/QrCodeScanner/: QrCodeScanner.tsx
src/components/SlideInAnim/: SlideInAnim.tsx
