[tool.poetry]
name = "nahat-server"
version = "0.1.0"
description = ""
authors = ["Ray <raymond.dev@icloud.com>"]
readme = "README.md"
packages = [{include = "nahat_server"}]

[tool.poetry.dependencies]
python = "^3.8"
anyio="3.6.1"
certifi="2022.6.15"
charset-normalizer="2.1.1"
click="8.1.3"
fastapi="0.81.0"
fastapi-utils="0.2.1"
greenlet="1.1.3"
h11="0.13.0"
idna="3.3"
Pillow="9.2.0"
pydantic="1.10.1"
pymongo={extras = ["srv"], version = "^4.2.0"}
qrcode="7.3.1"
requests="2.28.1"
sniffio="1.3.0"
SQLAlchemy="1.4.40"
starlette="0.19.1"
typing_extensions="4.3.0"
urllib3="1.26.12"
uvicorn="0.18.3"
mongoose="^0.0.1"
websockets = "^10.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
